# DeviceDetection

./: .gitignore  DeviceDetection.sln  README.md
AMDOpenCLDeviceDetection/: AMDOpenCLDeviceDetection.cpp  CMakeLists.txt
CPUDetection/: CMakeLists.txt  CPUDetection.vcxproj  CPUDetection.vcxproj.filters  CPUFeatures.h  CPUInfo.cpp  CPUInfo.h  main.cpp
CudaDeviceDetection/: CMakeLists.txt  CudaDetection.cpp
